Use isEmpty() instead if isBlank()